# genesis-protocol

./: .cargoignore  .gitignore  CHANGELOG.md  CURRENT_STATUS.md  Cargo.toml  DEMO_EXECUTION_REPORT.md  DEPLOYMENT_README.md  IMPLEMENTATION_PLAN.md  LANDING_PAGE_PROMPT.md  LICENSE  PROTOCOL_SPECIFICATION.md  QUICK_START.md  QUICK_START_STATUS.md  README.md  ROADMAP.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml
demos/: first_birth.rs  genesis_integrated_demo.py
examples/: FITNESS_ENVIRONMENT_GUIDE.md  collective_swarm_simple.rs  custom_fitness_environment.rs  evolution_simulation.rs  first_birth.rs  neural_network.rs  performance_demo.rs  simple_fitness_example.rs  test_protocol.rs
src/: collective.rs  dna.rs  evolution.rs  lib.rs  neural.rs
